--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "http://mywebsite.com/relativepath",
   "scripts": {
     "dev": "vite",
-    "build": "CI= react-scripts build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
